<resources>
    <string name="app_name">Conoce Tu UdeA</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="misiones">Misiones</string>
    <string name="avances">Avances</string>
    <string name="ranking">Ranking</string>
    <string name="cuentalb">Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="title_activity_character_select">CharacterSelectActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="logros">Logros</string>

    <string-array name="char_names">
        <item>Wizard</item>
        <item>Warrior</item>
    </string-array>

    <string-array name="char_infos">
        <item>Es un super Mago que tiene poderes muy chéveres :)</item>
        <item>Es un super guerrero que tiene poderes muy chéveres :)</item>
    </string-array>
</resources>
